--- a/task_management_app/pubspec.yaml
+++ b/task_management_app/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   unicons: ^2.1.0
   firebase_core: 2.3.0
   firebase_auth: 4.1.4
+  google_sign_in: 5.4.2
+  firebase_auth_web: 5.1.3
   flutter: 
     sdk: flutter
 
