--- a/task_management_app/pubspec.yaml
+++ b/task_management_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: 4.1.4
   google_sign_in: 5.4.2
   firebase_auth_web: 5.1.3
+  cloud_firestore: 4.1.0
   flutter: 
     sdk: flutter
 
